fix: scrollbars & avatar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 @import url('https://fonts.cdnfonts.com/css/lucida-grande');
 
+*::-webkit-scrollbar {
+  display: none;
+  scrollbar-width: 0;
+}
+
 .navbar ul li a:after,
 .navbar ul li button:after,
 .main a:after,
